# Arabic-Phonemizer

./: .gitignore  MANIFEST.IN  README.md  out.txt  pyproject.toml  setup.py
.github/workflows/: build_distribute.yaml
arabic_phonemizer/: __init__.py  constants.py  phonemizer.py
arabic_phonemizer/espeak/: api.py  espeak.py
package/arabic_phonemizer-0.1.0.dist-info/: RECORD
package/arabic_phonemizer/espeak/: __init__.py  espeak.py
shared_libs/macosx/x86_64/: libespeak-ng.dylib
