[build-system]
requires = ["setuptools>=61.0.0","wheel","cibuildwheel","cython"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic_phonemizer"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = []
description = "A simple and efficient Arabic phonemizer."
authors = [
    { name = "Muhammad Abd Al-sattar", email = "muhammadabdalsattar@gmail.com" },
]


[tool.setuptools]
packages = ["arabic_phonemizer","arabic_phonemizer.espeak"]